--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,3 @@
-sonar.projectKey=GC-Bank
-sonar.projectName=GC-Bank
+sonar.projectKey=githubaction
+sonar.projectName=githubaction
 sonar.java.binaries=.
