--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -118,7 +118,7 @@ jobs:
       with:
         context: .
         push: true
-        tags: adijaiswal/bankapp:latest
+        tags: raahul07/bankapp:latest
         file: ./Dockerfile
 
   deploy_to_kubernetes:
