--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -9,15 +9,13 @@ jobs:
     runs-on: self-hosted
     steps:
       - uses: actions/checkout@v4
-      - name: Set up JDK 17
+      - name: Set up JDK 17 with Maven
         uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
           cache: maven
-      - name: Install Maven
-        run: sudo apt-get update && sudo apt-get install -y maven
-      - name: Build with Maven
+      - name: Compile with Maven
         run: mvn compile
 
   security-check:
@@ -25,32 +23,36 @@ jobs:
     needs: compile
     steps:
       - uses: actions/checkout@v4
-      - name: Trivy Installation
+      - name: Install Trivy
         run: |
-          sudo apt-get install -y wget apt-transport-https gnupg lsb-release
+          sudo apt-get update
+          sudo DEBIAN_FRONTEND=noninteractive apt-get install -y wget apt-transport-https gnupg lsb-release
           wget -qO - https://aquasecurity.github.io/trivy-repo/deb/public.key | sudo apt-key add -
           echo "deb https://aquasecurity.github.io/trivy-repo/deb $(lsb_release -sc) main" | sudo tee /etc/apt/sources.list.d/trivy.list
-          sudo apt-get update -y
-          sudo apt-get install -y trivy
-      - name: Trivy FS Scan
+          sudo apt-get update
+          sudo DEBIAN_FRONTEND=noninteractive apt-get install -y trivy
+
+      - name: Run Trivy File System Scan
         run: trivy fs --format json -o fs-report.json .
-      - name: Gitleaks Installation
-        run: sudo apt install -y gitleaks
-      - name: Gitleaks Code Scan
-        run: gitleaks detect --source . --report-path gitleaks-report.json --format json
+
+      - name: Install Gitleaks
+        run: sudo DEBIAN_FRONTEND=noninteractive apt install -y gitleaks
+
+      - name: Run Gitleaks Scan
+        run: gitleaks detect --source . --report-path=gitleaks-report.json --format=json
 
   test:
     runs-on: self-hosted
     needs: security-check
     steps:
       - uses: actions/checkout@v4
-      - name: Set up JDK 17
+      - name: Set up JDK 17 with Maven
         uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
           cache: maven
-      - name: Unit Test Cases
+      - name: Run Unit Tests
         run: mvn test
 
   build_project_and_sonar_scan:
@@ -58,7 +60,7 @@ jobs:
     needs: test
     steps:
       - uses: actions/checkout@v4
-      - name: Set up JDK 17
+      - name: Set up JDK 17 with Maven
         uses: actions/setup-java@v4
         with:
           java-version: '17'
@@ -66,7 +68,7 @@ jobs:
           cache: maven
       - name: Build Project
         run: mvn package
-      - name: Upload JAR artifact
+      - name: Upload JAR Artifact
         uses: actions/upload-artifact@v4
         with:
           name: app-jar
@@ -76,7 +78,7 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ vars.SONAR_HOST_URL }}
-      - name: SonarQube Quality Gate check
+      - name: SonarQube Quality Gate Check
         id: sonarqube-quality-gate-check
         uses: sonarsource/sonarqube-quality-gate-action@master
         with:
@@ -85,12 +87,12 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ vars.SONAR_HOST_URL }}
 
-  build_docker_image_and_push:  # ✅ Fixed typo in job name
+  build_docker_image_and_push:  # ✅ fixed job name
     runs-on: self-hosted
     needs: build_project_and_sonar_scan
     steps:
       - uses: actions/checkout@v4
-      - name: Download JAR artifact
+      - name: Download JAR Artifact
         uses: actions/download-artifact@v4
         with:
           name: app-jar
@@ -104,7 +106,7 @@ jobs:
         uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      - name: Build and Push Docker image
+      - name: Build and Push Docker Image
         uses: docker/build-push-action@v6
         with:
           context: .
@@ -116,24 +118,23 @@ jobs:
     runs-on: self-hosted
     needs: build_docker_image_and_push
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
       - name: Install AWS CLI
         run: |
           curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
           unzip awscliv2.zip
           sudo ./aws/install
-      - name: Configure AWS credentials
+      - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-2
+          aws-region: ap-south-1
       - name: Set up kubectl
         uses: azure/setup-kubectl@v3
         with:
           version: latest
-      - name: Configure kubeconfig
+      - name: Configure Kubeconfig
         run: |
           mkdir -p $HOME/.kube
           echo "${{ secrets.EKS_KUBECONFIG }}" > $HOME/.kube/config
