--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -23,6 +23,7 @@ jobs:
     needs: compile
     steps:
       - uses: actions/checkout@v4
+
       - name: Install Trivy
         run: |
           sudo apt-get update
@@ -35,11 +36,22 @@ jobs:
       - name: Run Trivy File System Scan
         run: trivy fs --format json -o fs-report.json .
 
-      - name: Install Gitleaks
-        run: sudo DEBIAN_FRONTEND=noninteractive apt install -y gitleaks
+      - name: Install Gitleaks (official binary)
+        run: |
+          curl -sSL https://github.com/gitleaks/gitleaks/releases/latest/download/gitleaks-linux-amd64 -o gitleaks
+          chmod +x gitleaks
+          sudo mv gitleaks /usr/local/bin/
 
-      - name: Run Gitleaks Scan
-        run: gitleaks detect --source . --report-path=gitleaks-report.json --format=json
+      - name: Verify Gitleaks Installation
+        run: gitleaks version
+
+      - name: Run Gitleaks Secret Scan
+        run: |
+          gitleaks detect \
+            --source . \
+            --report-path=gitleaks-report.json \
+            --report-format=json \
+            --redact
 
   test:
     runs-on: self-hosted
@@ -87,7 +99,7 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ vars.SONAR_HOST_URL }}
 
-  build_docker_image_and_push:  # ✅ fixed job name
+  build_docker_image_and_push:
     runs-on: self-hosted
     needs: build_project_and_sonar_scan
     steps:
@@ -129,7 +141,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ap-south-1
+          aws-region: us-east-2
       - name: Set up kubectl
         uses: azure/setup-kubectl@v3
         with:
