--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -36,9 +36,11 @@ jobs:
       - name: Run Trivy File System Scan
         run: trivy fs --format json -o fs-report.json .
 
-      - name: Install Gitleaks (official binary)
+      - name: Install Gitleaks (from GitHub release)
         run: |
-          curl -sSL https://github.com/gitleaks/gitleaks/releases/latest/download/gitleaks-linux-amd64 -o gitleaks
+          GITLEAKS_VERSION=$(curl -s https://api.github.com/repos/gitleaks/gitleaks/releases/latest | grep tag_name | cut -d '"' -f 4)
+          curl -sSL https://github.com/gitleaks/gitleaks/releases/download/${GITLEAKS_VERSION}/gitleaks_${GITLEAKS_VERSION#v}_linux_x64.tar.gz -o gitleaks.tar.gz
+          tar -xzf gitleaks.tar.gz
           chmod +x gitleaks
           sudo mv gitleaks /usr/local/bin/
 
@@ -141,7 +143,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-2
+          aws-region: us-east-1
       - name: Set up kubectl
         uses: azure/setup-kubectl@v3
         with:
