--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,6 @@
 sonar.projectKey=githubaction
 sonar.projectName=githubaction
-sonar.java.binaries=.
+sonar.host.url=http://3.139.72.239:9000
+sonar.login=${SONAR_TOKEN}
+sonar.sources=src
+sonar.java.binaries=target
